<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="#000000"
    tools:context=".RecommendationActivity"
    >
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="#FFFFFF"
                android:text="@string/brightLight_string"
                android:textSize="18sp" />
            <CheckBox
                android:id="@+id/checkbox1_1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="#FFFFFF"
                android:text="@string/genre1" />

            <CheckBox
                android:id="@+id/checkbox1_2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="#FFFFFF"
                android:text="@string/genre2" />

            <CheckBox
                android:id="@+id/checkbox1_3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="#FFFFFF"
                android:text="@string/genre3" />

            <CheckBox
                android:id="@+id/checkbox1_4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="#FFFFFF"
                android:text="@string/genre4" />

            <CheckBox
                android:id="@+id/checkbox1_5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="#FFFFFF"
                android:text="@string/genre5" />

            <CheckBox
                android:id="@+id/checkbox1_6"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="#FFFFFF"
                android:text="@string/genre6" />

            <CheckBox
                android:id="@+id/checkbox1_7"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="#FFFFFF"
                android:text="@string/genre7" />

            <CheckBox
                android:id="@+id/checkbox1_8"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="#FFFFFF"
                android:text="@string/genre8" />

            <CheckBox
                android:id="@+id/checkbox1_9"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="#FFFFFF"
                android:text="@string/genre9" />

            <CheckBox
                android:id="@+id/checkbox1_10"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="#FFFFFF"
                android:text="@string/genre10" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="#FFFFFF"
                android:text="@string/mediumLight_string"
                android:textSize="18sp" />
            <CheckBox
                android:id="@+id/checkbox2_1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="#FFFFFF"
                android:text="@string/genre1" />

            <CheckBox
                android:id="@+id/checkbox2_2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="#FFFFFF"
                android:text="@string/genre2" />

            <CheckBox
                android:id="@+id/checkbox2_3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="#FFFFFF"
                android:text="@string/genre3" />


            <CheckBox
                android:id="@+id/checkbox2_4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="#FFFFFF"
                android:text="@string/genre4" />

            <CheckBox
                android:id="@+id/checkbox2_5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="#FFFFFF"
                android:text="@string/genre5" />

            <CheckBox
                android:id="@+id/checkbox2_6"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="#FFFFFF"
                android:text="@string/genre6" />

            <CheckBox
                android:id="@+id/checkbox2_7"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="#FFFFFF"
                android:text="@string/genre7" />

            <CheckBox
                android:id="@+id/checkbox2_8"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="#FFFFFF"
                android:text="@string/genre8" />

            <CheckBox
                android:id="@+id/checkbox2_9"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="#FFFFFF"
                android:text="@string/genre9" />

            <CheckBox
                android:id="@+id/checkbox2_10"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="#FFFFFF"
                android:text="@string/genre10" />
        </LinearLayout>



        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="#FFFFFF"
                android:text="@string/darkLight_string"
                android:textSize="18sp" />
            <CheckBox
                android:id="@+id/checkbox3_1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="#FFFFFF"
                android:text="@string/genre1" />

            <CheckBox
                android:id="@+id/checkbox3_2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="#FFFFFF"
                android:text="@string/genre2" />

            <CheckBox
                android:id="@+id/checkbox3_3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="#FFFFFF"
                android:text="@string/genre3" />

            <CheckBox
                android:id="@+id/checkbox3_4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="#FFFFFF"
                android:text="@string/genre4" />

            <CheckBox
                android:id="@+id/checkbox3_5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="#FFFFFF"
                android:text="@string/genre5" />

            <CheckBox
                android:id="@+id/checkbox3_6"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="#FFFFFF"
                android:text="@string/genre6" />

            <CheckBox
                android:id="@+id/checkbox3_7"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="#FFFFFF"
                android:text="@string/genre7"/>

            <CheckBox
                android:id="@+id/checkbox3_8"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="#FFFFFF"
                android:text="@string/genre8" />

            <CheckBox
                android:id="@+id/checkbox3_9"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="#FFFFFF"
                android:text="@string/genre9" />
            <CheckBox
                android:id="@+id/checkbox3_10"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="#FFFFFF"
                android:text="@string/genre10" />

        </LinearLayout>
        <Button
            android:id="@+id/submit_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/submit_string"
            android:layout_centerInParent="true"/>
    </LinearLayout>
</ScrollView>